--- a/report/Main.tex
+++ b/report/Main.tex
@@ -274,9 +274,9 @@ the color is close to yellow the more coefficient is close to 1.
 \end{figure}
 
 The experiment has been done on 2 days, we can easily see night because there is no activities on a long period.Then we can identify
-2 types of groups : friends groups and classes groups, indeed most of the groups have less interactions during the launch break (line 4 and 28)
+2 types of groups : friends groups and classes groups, indeed most of the groups have less interactions during the lunch break (line 4 and 28)
 and have many interactions during class, these groups are classes groups. And the column 2 correspond to a group of friends who have
-no interactions during class and a lot of interactions at launch.
+no interactions during class and a lot of interactions at lunch.
 
 \section{Bibliographie}
 \begin{enumerate}
